# d3d12-rs

./: .gitignore  Cargo.toml  LICENSE
bindings/: Cargo.toml  build.rs
src/: lib.rs
