[package]
name = "d3d12-rs"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Oxide Engine"
]
edition = "2018"
description = "Rust wrapper for D3D12"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.18.0"
bindings = { path = "bindings" }
array-init = "2.0.0"